--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
   "scripts": {
-    "prebuild": "rm -r ./lib",
+    "prebuild": "rm -rf ./lib",
     "build": "tsc -b ./tsconfig.build.json ./tsconfig.build-cjs.json",
     "lint": "tsc --noEmit && eslint \"./src/**/*.ts\"",
     "fix:ts": "eslint --fix \"./src/**/*.ts\"",
