--- a/.gitignore
+++ b/.gitignore
@@ -30,10 +30,13 @@ npm-debug.log
 yarn-error.log
 *.tsbuildinfo
 
-# バンドラ
+# bundler
 .cache
 .next
 .vercel
+
+# coverage
+coverage
 
 # datastore emulator
 emulators
