--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc -b ./tsconfig.build.json ./tsconfig.build-cjs.json",
     "lint": "tsc --noEmit && eslint \"./src/**/*.ts\"",
     "fix:ts": "eslint --fix \"./src/**/*.ts\"",
-    "test": "jest"
+    "test": "jest",
+    "codecov": "codecov"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "@types/node": "^14.14.32",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
+    "codecov": "^3.8.2",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
