--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "tsc -b ./tsconfig.build.json ./tsconfig.build-cjs.json",
     "lint": "tsc --noEmit && eslint \"./src/**/*.ts\"",
     "fix:ts": "eslint --fix \"./src/**/*.ts\"",
-    "test": "jest",
-    "codecov": "codecov"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,25 +22,24 @@
   },
   "homepage": "https://github.com/mish-tv/cache#readme",
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@types/jest-plugin-context": "^2.9.4",
-    "@types/node": "^14.14.32",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
-    "codecov": "^3.8.2",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-import-helpers": "^1.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "jest": "^26.6.3",
+    "@types/jest": "^29.2.5",
+    "@types/jest-plugin-context": "^2.9.5",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "jest": "^29.3.1",
     "jest-plugin-context": "^2.9.0",
-    "prettier": "^2.2.1",
-    "ts-jest": "^26.5.3",
-    "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.9.0",
-    "type-fest": "^1.0.1",
-    "typescript": "^4.2.3"
+    "prettier": "^2.8.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
+    "type-fest": "^3.5.1",
+    "typescript": "^4.9.4"
   }
 }
