--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,9 +2,9 @@
   "env": { "browser": true, "node": true, "es6": true },
   "extends": [
     "eslint:recommended",
-    "plugin:prettier/recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:react/recommended"
+    "plugin:react/recommended",
+    "prettier"
   ],
   "plugins": [
     "@typescript-eslint",
@@ -15,35 +15,82 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module",
-    "ecmaFeatures": { "jsx": true }
+    "ecmaFeatures": { "jsx": true },
+    "project": "./tsconfig.json"
   },
   "settings": {
-    "react": { "pragma": "React", "version": "17.0" }
+    "react": { "pragma": "React", "version": "18.2" }
   },
   "rules": {
+    "@typescript-eslint/await-thenable": "error",
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      { "argsIgnorePattern": "^_" }
+    ],
     "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"],
     "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-floating-promises": "error",
+    "@typescript-eslint/no-misused-promises": "error",
+    "@typescript-eslint/switch-exhaustiveness-check": "error",
     "import/no-self-import": "error",
     "import/no-cycle": "error",
     "import/no-useless-path-segments": "error",
     "import/no-relative-parent-imports": "error",
     "import/first": "error",
     "import/newline-after-import": "error",
-    "max-len": ["error", { "code": 128 }],
+    "react/boolean-prop-naming": [
+      "error",
+      {
+        "rule": "^(is|has|will|can)[A-Z]([A-Za-z0-9]?)+"
+      }
+    ],
     "react/button-has-type": "error",
     "react/display-name": "off",
+    "react/function-component-definition": [
+      "error",
+      {
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "arrow-function"
+      }
+    ],
+    "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
+    "react/jsx-boolean-value": ["error", "never"],
     "react/jsx-curly-brace-presence": ["error", "never"],
+    "react/jsx-sort-props": [
+      "error",
+      {
+        "callbacksLast": true,
+        "shorthandFirst": false,
+        "shorthandLast": true,
+        "ignoreCase": false,
+        "noSortAlphabetically": true,
+        "reservedFirst": ["key", "ref"]
+      }
+    ],
     "arrow-body-style": ["error", "as-needed"],
-    "sort-imports": ["error", {
-      "ignoreCase": true,
-      "ignoreDeclarationSort": true
-    }],
+    "require-await": "error",
+    "sort-imports": [
+      "error",
+      {
+        "ignoreCase": true,
+        "ignoreDeclarationSort": true
+      }
+    ],
     "no-duplicate-imports": "error",
     "no-throw-literal": "error",
     "newline-before-return": "error",
     "no-return-await": "error"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["**/@types/**/*"],
+      "rules": {
+        "@typescript-eslint/consistent-type-definitions": "off"
+      }
+    }
+  ]
 }
