--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,7 @@
     "incremental": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "lib": [
-      "es2019",
-      "dom"
-    ],
+    "lib": ["es2019", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -25,18 +22,11 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "es2019",
-    "typeRoots": [
-      "./node_modules/@types",
-      "./@types"
-    ],
+    "typeRoots": ["./node_modules/@types", "./@types"],
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
-  "include": [
-    "./**/*.ts"
-  ],
-  "exclude": [
-    "./**/node_modules"
-  ]
+  "include": ["./**/*.ts"],
+  "exclude": ["./**/node_modules"]
 }
